# TClock-Win11

./: README.md
additional_files/: CustomVars.md  CustomVars_jp.md  MenuCustom.md  MenuCustom_jp.md
source/: Build_Information.txt  ENCODING_POLICY.md  build.bat
source/tc2ch/: tc2ch.vcproj  version.h
source/tc2ch/common/: ini_io_utf8.c  ini_io_utf8.h  text_codec.c  text_codec.h  text_file_utf8.c  text_file_utf8.h
source/tc2ch/dll/: bmp.c  dll.vcproj  dll.vcxproj  dllmain.c  font.c  for_win11.c  format.c  gpumon.c  hdd.c  net.c  newCodes_Win10.cpp  newapi.c  permon.c  resource.h  subclock.c  sysres.c  tcdll.def  tcdll.h  tcdll.rc  tclock.c  tempmon.c  tooltip.c  traynotify.c  utl.c
source/tc2ch/exe/: exe.vcxproj  exe.vcxproj.filters  exemain.c  filelist.c  memcpy.c  menu.c  mouse.c  page.c  page_etc.c  page_keywords.c  page_win11.c  pageabout.c  pageanalog.c  pagebarmeter.c  pagebarmeter_color.c  pagechime.c  pagecolor.c  pagecolor_additional.c  pageformat.c  pageformat2.c  pagegraph.c  pagemisc.c  pagemouse.c  pagetooltip.c  propdlg.c  resource.h  tclock.h  tclock.rc  utl.c
source/tc2ch/language/: langja.def  langja.rc  language.vcproj  language.vcxproj  resource.h
source/tcap/: CMakeLists.txt  CODE_OVERVIEW.md  README.md  SETTINGS.md  TCapture.ini  build.bat  gui_main.cpp  screenshot.cpp  settings.cpp  settings.h  stb_image_write.h
source/tcap/lang/en/: strings.ini
source/tcap/lang/ja/: strings.ini
